package ua.khpi.oop.malokhvii02.event;

/**
 * Загальний інтерфейс, переліків типів, які описують подію. Використовується,
 * як ключ для контейнеру подій.
 *
 * @author malokhvii-eduard (malokhvii.ee@gmail.com)
 * @version 1.0.0
 * @see EventsContainer
 */
public interface EventType {

}
